common/app/components/subtitles.css
.asbplayer-offscreen {
    position: fixed !important;
    left: 100% !important;
    top: 100% !important;
}

.asbplayer-subtitles {
    margin: 0;
    padding: 0;
    display: table;
    margin: auto;
    white-space: pre-wrap !important;
}

.asb-reading {
    ruby-position: over !important;
}

.asb-reading rt {
    font-size: 0.5em !important;
    line-height: 1 !important;
    display: revert !important; /* Safari doesn't support 'ruby-text' */
}

.asb-frequency {
    ruby-position: under;
}

.asb-frequency rt {
    font-size: 0.25em; /* This is overridden for SubtitlePlayer as it's too small */
    line-height: 1;
}

.asb-frequency-hover {
    ruby-position: under;
}

.asb-frequency-hover rt {
    font-size: 0.25em; /* This is overridden for SubtitlePlayer as it's too small */
    line-height: 1;
    display: none;
}

.asb-frequency-hover:hover rt {
    display: revert; /* Safari doesn't support 'ruby-text' */
}

.asbplayer-subtitles-blurred {
    filter: blur(10px);
}

.asbplayer-subtitles-blurred:hover {
    filter: none;
}

.asbplayer-subtitle-rich {
    display: none;
}

.asbplayer-subtitles:hover .asbplayer-subtitle-text {
    display: none;
}

.asbplayer-subtitles:hover .asbplayer-subtitle-rich {
    display: inline;
}

.asbplayer-token-container:focus-within .asb-token-highlight:hover {
    background-color: rgb(0, 123, 255) !important;
}

.asbplayer-token-container:focus-within {
    outline: none;
}

